crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__agent_capability.snap
---
source: crates/rimz/src/sidebar_renderer/render/mod.rs
assertion_line: 749
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────
 ? 0   ! 1   ⏸︎ 0   ✓ 0 ⢿ 0   ○ 0

▏⑂ feature-migration ┄┄┄┄┄┄┄┄┄┄┄┄
▌! claude · Opus · 1m
▌  db migrate
▌  ▢ ──────────────────────    0%
      ␣ next ?!   ? for help
