crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__agent_card_context_age.snap
---
source: crates/rimz/src/sidebar_renderer/render/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                       ⢿ 1   ○ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude · Opus 4.8 · high · 200k                $1.27
▌  ledger refactor
▌  ▣ ━━━━━━━━━━━━━━━━━─────────────────────────── 38.2%
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k                    ◔ <t>

                       ? for help
