crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__agents_process_tail.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0           ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude
▌  db migrate
▌  ▢ ────────────────────────────────    0%
▏○ zsh





                 ? for help
