crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__degraded_banner.snap
---
source: crates/rimz/src/sidebar_renderer/render/mod.rs
assertion_line: 749
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 0
 ──────────────────────────────────────────────────────────────────────────────












 ! Sidebar degraded for <elapsed>: snapshot failed: ledger not found
