crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__directory_room_root_pod.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
expression: screen
---
 ⌘ query-engine                 /srv/agents

 ◎ 0
 ¤ 1
 ──────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0           ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ⇡2  +12 -3
▌⣾ claude
▌  db migrate
▌  ▢ ────────────────────────────────    0%

 agents
 ○ zsh



                 ? for help
