crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__first_run_nudge.snap
---
source: crates/rimz/src/sidebar_renderer/render/mod.rs
assertion_line: 749
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 0
 ──────────────────────────────────────────────────────────────────────────────

 no agents yet
 install hooks:
 rimz hooks install claude








                                   ? for help
