crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__fleet_ledger.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 12                          ◇ 3M ↘ 300k ↗ 3M ◍ 120k ◌ 6M
 ¤ 1                                                 $40.23
 ──────────────────────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0                           ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude · Opus 4.8 · high · 200k                    $1.27
▌  ledger refactor
▌  ▣ ━━━━━━━━━━━━━━━━━━────────────────────────────── 38.2%
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k











 ──────────────────────────────────────────────────────────
 Claude v2.1.158 · Claude Max                          ⇅ rc

  ▐▛███▜▌  ◎ 12  ◇ 486k ↘ 422k ↗ 64k ◌ 68k            $3.50
 ▝▜█████▛▘ <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱  ↻ <reset>
   ▘▘ ▝▝   <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱  ↻ <reset>

  W: ◎  92  ◇ 21.0M ↘ 2.3M ↗ 18.7M ◌  51.0M         $312.40
  M: ◎ 212  ◇ 33.0M ↘ 4.3M ↗ 28.7M ◌ 121.0M       $1,240.57

                         ? for help
